--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ nav a.active {
 
 #hero {
     height: 70vh;
-    background: url('logo.png'), url('https://images.unsplash.com/photo-1500530855697-b586d89ba3ee') center/cover no-repeat;
+    background: url('https://images.unsplash.com/photo-1500530855697-b586d89ba3ee') center/cover no-repeat;
     display: flex;
     align-items: center;
     justify-content: center;
